--- a/index.html
+++ b/index.html
@@ -25,43 +25,51 @@
     <title>Jimcosey - Portfolio</title>
   </head>
   <body>
+    <!-- Header menu -->
     <header>
+      <nav class="navigation-bar">
+        <a href="#"
+          ><svg
+            width="30"
+            height="30"
+            xmlns="http://www.w3.org/2000/svg"
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+          >
+            <path
+              d="M22 11.414v12.586h-20v-12.586l-1.293 1.293-.707-.707 12-12 12 12-.707.707-1.293-1.293zm-6 11.586h5v-12.586l-9-9-9 9v12.586h5v-9h8v9zm-1-7.889h-6v7.778h6v-7.778z"
+            /></svg
+        ></a>
+        <a href="#"
+          ><svg
+            width="30"
+            height="30"
+            xmlns="http://www.w3.org/2000/svg"
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+          >
+            <path
+              d="M16 4h8v19h-24v-19h8v-2c0-.552.448-1 1-1h6c.552 0 1 .448 1 1v2zm7 1h-22v17h22v-17zm-3 4v1h-16v-1h16zm-5-6.5c0-.133-.053-.26-.146-.354-.094-.093-.221-.146-.354-.146h-5c-.133 0-.26.053-.354.146-.093.094-.146.221-.146.354v1.5h6v-1.5z"
+            /></svg
+        ></a>
+        <a href="#"
+          ><svg
+            width="30"
+            height="30"
+            xmlns="http://www.w3.org/2000/svg"
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+          >
+            <path
+              d="M8.26 1.289l-1.564.772c-5.793 3.02 2.798 20.944 9.31 20.944.46 0 .904-.094 1.317-.284l1.542-.755-2.898-5.594-1.54.754c-.181.087-.384.134-.597.134-2.561 0-6.841-8.204-4.241-9.596l1.546-.763-2.875-5.612zm7.746 22.711c-5.68 0-12.221-11.114-12.221-17.832 0-2.419.833-4.146 2.457-4.992l2.382-1.176 3.857 7.347-2.437 1.201c-1.439.772 2.409 8.424 3.956 7.68l2.399-1.179 3.816 7.36s-2.36 1.162-2.476 1.215c-.547.251-1.129.376-1.733.376"
+            /></svg
+        ></a>
+      </nav>
+    </header>
+
+    <div id="banner">
       <div id="logo">
         <h1 class="fredoka_font">Jimcosey <span class="blue_color">.</span></h1>
-      </div>
-    </header>
-    <div id="banner">
-      <div id="container-info_banner">
-        <h1 class="nunito_font">
-          Bring <span class="blue_color"> Happiness</span> <br />
-          in your life with coding
-        </h1>
-        <p class="grey_color">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum ea
-          repellendus adipisci! Ducimus reprehenderit sequi autem! A,
-          recusandae. Quaerat error eius natus impedit? Omnis dolorum, libero
-          sequi mollitia ipsam quasi!
-        </p>
-        <button class="blue_button">Say Hello</button>
-      </div>
-      <div id="illustration_banner">
-        <img src="img/undraw_superhero_kguv.svg" alt="" />
-      </div>
-    </div>
-    <div id="container-contain">
-      <div id="about-us">
-        <div class="contain-text">
-          <h1 class="nunito_font">About - Us</h1>
-          <p class="grey_color">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, quae
-            rem quasi dolorem voluptatum quam natus explicabo eius deserunt at
-            nulla, quidem, commodi quisquam sed vel? Omnis suscipit voluptate
-            ea?
-          </p>
-        </div>
-        <div class="contain-image">
-          <img src="img/undraw_team_spirit_hrr4.svg" alt="" />
-        </div>
       </div>
     </div>
   </body>
